fixed body overflow

--- a/src/css/buy_now.css
+++ b/src/css/buy_now.css
@@ -3,7 +3,6 @@
     top: 0;
     left: 0;
 
-    display: none;
     width: 100%;
     height: 1080px;
 
@@ -25,10 +24,6 @@
     -moz-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
     -o-transform: translateX(-50%);
-}
-
-body {
-    overflow: hidden;
 }
 
 .modal-close-btn {
